# ogbench

./: .gitignore  README.md  pyproject.toml
impls/: download_100m.sh  job.sh  main.py  pretrain_atc.py  pretrain_vae.py  pyproject.toml
impls/agents/: __init__.py  discrete_latent_sharsa.py  discrete_latent_trl.py  dqc.py  gciql.py  hiql.py  latent_sharsa.py  latent_trl.py  sharsa.py  trl.py  trl_value.py
impls/utils/: async_evaluation.py  datasets.py  encoders.py  env_utils.py  flax_utils.py  flows.py  log_utils.py  networks.py  pretraining.py  world_model.py
